# PersonalMasker

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: openapi-drift-check.yml  ruff.yml
backend/: Dockerfile  README.md  app.py  pyproject.toml  ruff.toml
backend/middlewares/: logging.py
backend/routers/: mask.py
backend/schemas/: mask.py
backend/scripts/: export_openapi.py
backend/scripts/docs/api/: openapi.v1.json
backend/services/: masker.py
backend/tests/: test_app.py
backend/tests/middlewares/: test_logging.py
backend/tests/routers/: test_mask.py
backend/tests/services/: test_masker.py
docs/: system-architecture.md
docs/api/: README.md  openapi.v1.json
docs/ui/: wireframes.html
frontend/: Dockerfile.dev  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: DetectedTable.tsx  DiffView.tsx  Header.tsx  LeftControls.tsx  ResultView.tsx  Tabs.tsx
