[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ginza==5.2.0",
    "ja-ginza==5.2.0",
    "numpy==1.26.4",
    "spacy==3.7.5",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]
